--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "bootstrap": "^5.1.1",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
@@ -13,11 +14,20 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "joi": "^17.4.2",
+    "jsonwebtoken": "^8.5.1",
+    "md5": "^2.3.0",
     "morgan": "~1.9.1",
+    "mysql2": "^2.3.0",
     "npm-run-all": "^4.1.5",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.3",
+    "react-bootstrap-floating-label": "^1.6.0",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "sequelize": "^6.6.5",
+    "sequelize-auto": "^0.8.4",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
